# PostureBuddy

./: .gitignore  PostureBuddy specification.md  README.md  package-lock.json  requirements.txt
.claude/: settings.local.json
posture_buddy/: CMakeLists.txt  package.xml
posture_buddy/dashboard/: .env.example  package-lock.json  package.json
posture_buddy/dashboard/src/app/: globals.css  layout.tsx  page.tsx
posture_buddy/dashboard/src/components/: DashboardClient.tsx  SessionReportModal.tsx
posture_buddy/dashboard/src/components/layout/: DashboardGrid.tsx  Header.tsx
posture_buddy/dashboard/src/components/panels/: AlertFeedPanel.tsx  CameraFeedPanel.tsx  ConversationPanel.tsx  DegradationPanel.tsx  FatigueLevelPanel.tsx  PostureStatusPanel.tsx  SessionTimelinePanel.tsx  SessionTimerPanel.tsx  SystemStatusPanel.tsx  WellnessStatsPanel.tsx
posture_buddy/dashboard/src/components/shared/: GaugeRing.tsx  PulsingDot.tsx  StatCard.tsx  StatusBadge.tsx
posture_buddy/dashboard/src/hooks/: useAlertHistory.ts  useRosBridge.ts
posture_buddy/dashboard/src/lib/: formatters.ts  mockData.ts  rosbridge.ts
posture_buddy/dashboard/src/store/: useDashboardStore.ts
posture_buddy/dashboard/src/types/: ros.ts
posture_buddy/launch/: fatigue_state.launch  feedback_controller.launch  pose_estimation.launch  posture_buddy.launch  posture_eval.launch
posture_buddy/msg/: FatigueMetrics.msg  HriStatus.msg  Kinematics.msg  PostureStatus.msg
posture_buddy/src/: .env.example  fatigue_state_node.py  feedback_controller_node.py  pose_estimation_node.py  posture_eval_node.py
