<?xml version="1.0"?>
<package format="2">
  <name>posture_buddy</name>
  <version>0.1.0</version>
  <description>
    PostureBuddy: autonomous workspace wellness monitor.
    Owns all shared custom message types used across all 5 modules.
  </description>

  <maintainer email="jianwen0414@gmail.com">Jian Wen Lee</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build-time only: generates Python/C++ message classes -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
